app/assets/stylesheets/base/nav.scss
.main-nav div {
}


// NAV BAR

.main-nav {
  width: 100%;
  height: 64px;
  display: flex;
  justify-content: space-between;
}

// MAIN NAV LEFT

.main-nav-left {
  width: 50%;
  display: flex;
  padding: 2px;
  justify-content: flex-start;
}

.main-nav-airbnb-logo {
  margin: 5px 2px 5px 20px;
}

.airbnb-logo {
  fill: currentColor;
  height: 1em;
  color: #FF5A5F !important;
  font-size: 34px !important;
}

// MAIN NAV RIGHT

.main-nav-right {
  padding: 2px;
  display: flex;
  justify-content: flex-end;
}

.main-nav-links {
  display: flex;
  justify-content: space-between;
  width: 450px;
}

.main-nav-links a {
  font-weight: 400;
  font-family: "Helvetica Neue";
  text-align: center;
  flex-grow: 1;
  margin: 7px 0;
  padding: 10px 0;
  font-size: 13px;
  cursor: pointer;
  text-decoration: none;
}

.main-nav-links a:hover {
}

#main-nav-avatar-link {
  padding: 3px 0;
  position: relative;
}

#main-nav-avatar-link img {
  border-radius: 30px;
  height: 30px;
}

